--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -18,50 +18,50 @@
 @plugin "daisyui/theme" {
   name: "light";
 
-  --color-primary: #93bbfb;
-  --color-primary-content: #212638;
-  --color-secondary: #dae8ff;
-  --color-secondary-content: #212638;
-  --color-accent: #93bbfb;
+  --color-primary: #7c65c1; /* Farcaster Purple */
+  --color-primary-content: #ffffff;
+  --color-secondary: #e8e4f6;
+  --color-secondary-content: #7c65c1;
+  --color-accent: #b9adff;
   --color-accent-content: #212638;
   --color-neutral: #212638;
   --color-neutral-content: #ffffff;
   --color-base-100: #ffffff;
-  --color-base-200: #f4f8ff;
-  --color-base-300: #dae8ff;
+  --color-base-200: #f7f5ff;
+  --color-base-300: #e8e4f6;
   --color-base-content: #212638;
-  --color-info: #93bbfb;
+  --color-info: #7c65c1;
   --color-success: #34eeb6;
   --color-warning: #ffcf72;
   --color-error: #ff8863;
 
   --radius-field: 9999rem;
-  --radius-box: 1rem;
+  --radius-box: 1.5rem;
   --tt-tailw: 6px;
 }
 
 @plugin "daisyui/theme" {
   name: "dark";
 
-  --color-primary: #212638;
-  --color-primary-content: #f9fbff;
-  --color-secondary: #323f61;
-  --color-secondary-content: #f9fbff;
+  --color-primary: #7c65c1;
+  --color-primary-content: #ffffff;
+  --color-secondary: #2a2438;
+  --color-secondary-content: #e8e4f6;
   --color-accent: #4969a6;
   --color-accent-content: #f9fbff;
   --color-neutral: #f9fbff;
   --color-neutral-content: #385183;
-  --color-base-100: #385183;
-  --color-base-200: #2a3655;
-  --color-base-300: #212638;
+  --color-base-100: #1d1929;
+  --color-base-200: #121019;
+  --color-base-300: #1d1929;
   --color-base-content: #f9fbff;
-  --color-info: #385183;
+  --color-info: #7c65c1;
   --color-success: #34eeb6;
   --color-warning: #ffcf72;
   --color-error: #ff8863;
 
   --radius-field: 9999rem;
-  --radius-box: 1rem;
+  --radius-box: 1.5rem;
 
   --tt-tailw: 6px;
   --tt-bg: var(--color-primary);
